tests/NormalTests/paczka1/fuzzy1/93892732.err
Error in line 2: awW7EVAz A591 87,4
Error in line 8: 1c6YdJ7 S457 61,4
Error in line 11: NLkQam5cbK A591 48,7
Error in line 23: uRgqZH3UGm A460 57,3
Error in line 26: 1c6YdJ7 S457 255,8
Error in line 35: awW7EVAz S457 74,5
